# subcheck

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claims-immutable.json  claims-main.json  claims-pull-request.json  policy-immutable.json  policy.json  policy.yaml
src/oidc_claim_inspector/: __init__.py  __main__.py  cli.py  policy.py  report.py
src/subcheck/: __init__.py  __main__.py  cli.py  decoder.py  policy.py  report.py  validator.py
tests/: conftest.py  test_cli.py  test_decoder.py  test_decoder_vectors.py  test_report.py  test_validator.py
tests/fixtures/: github_subjects.json
