[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subcheck"
version = "0.1.0"
description = "Decode GitHub Actions OIDC token claims and validate them against an expected-claims policy - a CI gate against over-broad cloud trust."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David Dashti" }]
keywords = ["oidc", "github-actions", "aws-iam", "cicd-security", "supply-chain-security", "least-privilege"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
  "Intended Audience :: Developers",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "mypy>=1.8", "types-PyYAML>=6", "ruff>=0.4", "bandit>=1.7"]

[project.urls]
Homepage = "https://github.com/Dashtid/subcheck"
Related = "https://github.com/Dashtid/subvectors"

[project.scripts]
subcheck = "subcheck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/subcheck"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
